--- a/blocks/src/price-option/editor.scss
+++ b/blocks/src/price-option/editor.scss
@@ -4,6 +4,48 @@
  * Replace them with your own styles or remove the file completely.
  */
 
-.wp-block-create-block-swp-price-option {
-	border: 1px dotted #f00;
+.wp-block-stripe-wp-price-option {
+	border: 1.5px solid #000;
+
+	.swp-d-none {
+		display: none;
+	}
+
+	.wp-block-stripe-wp-price-option__input-container {
+		position: relative;
+		inline-size: 100%;
+
+		.components-base-control {
+			font-size: inherit;
+		}
+
+		.components-base-control__field {
+			font-size: inherit;
+		}
+
+		.components-text-control__input {
+			background-color: inherit;
+			box-shadow: none;
+			border: none;
+			outline: none;
+			color: inherit;
+			font-size: inherit;
+			text-align: center;
+
+			&:focus {
+				box-shadow: none;
+			}
+		}
+
+		> i {
+			display: block;
+			font-style: normal;
+			pointer-events: none;
+			position: absolute;
+			text-align: center;
+			top: 50%;
+			transform: translateY(-50%);
+			inline-size: 30%;
+		}
+	}
 }
