--- a/blocks/src/submit-button/style.scss
+++ b/blocks/src/submit-button/style.scss
@@ -1,12 +1,3 @@
-/**
- * The following styles get applied both on the front of your site
- * and in the editor.
- *
- * Replace them with your own styles or remove the file completely.
- */
-
 .wp-block-stripe-wp-submit-button {
-	background-color: #21759b;
-	color: #fff;
-	padding: 2px;
+	inline-size: 100%;
 }
